--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,15 @@
-.counter-container {
-  text-align: center;
-  padding: 20px;
+.container-fluid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 400px;
+  height: 430px;
+  margin: 0 auto;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
@@ -25,8 +34,14 @@ h1.high {
   transition: background-color 0.3s ease;
 }
 
+button {
+  font-size: 18px;
+  background-color: #0b07ef;
+  border: 1px solid #ccc;
+  color: #f3f3f3;
+}
 button:disabled {
-  background-color: #ccc;
+  background-color: #c65b19;
   cursor: not-allowed;
 }
 
@@ -37,7 +52,9 @@ button:disabled {
 }
 
 .progress-bar {
-  width: 100%;
+  display: flex;
+  justify-items: center;
+  width: 90%;
   height: 30px;
   background-color: #f3f3f3;
   border: 1px solid #ccc;
