--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ h1.high {
   padding: 10px 20px;
   font-size: 1rem;
   cursor: pointer;
+  border-radius: 10px;
   transition: background-color 0.3s ease;
 }
 
@@ -46,7 +47,7 @@ button:disabled {
 }
 
 .feedback {
-  font-size: 1rem;
+  font-size: 1.3rem;
   color: #333;
   margin-top: 10px;
 }
